# ATM-simulator

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.docx  README.md
qml/: AdminPage.qml  BalancePage.qml  BalancePredictionPage.qml  ChangePasswordPage.qml  DepositPage.qml  LoginPage.qml  MainMenu.qml  TransactionHistoryPage.qml  TransferPage.qml  WithdrawPage.qml  main.qml
qml/components/: BottomActionButtons.qml  HeaderBar.qml  NumericKeypad.qml  ReceiptPrinter.qml  TransactionButton.qml  qmldir
resources/: resources.qrc
src/: AppController.cpp  AppController.h  main.cpp
src/models/: Account.cpp  Account.h  AccountAnalyticsService.cpp  AccountAnalyticsService.h  AccountModel.cpp  AccountModel.h  AccountService.cpp  AccountService.h  AccountValidator.cpp  AccountValidator.h  AdminService.cpp  AdminService.h  IAccountRepository.h  JsonAccountRepository.cpp  JsonAccountRepository.h  JsonPersistenceManager.cpp  JsonPersistenceManager.h  LoginResult.cpp  LoginResult.h  OperationResult.cpp  OperationResult.h  PrinterModel.cpp  PrinterModel.h  TransactionModel.cpp  TransactionModel.h
src/viewmodels/: AccountViewModel.cpp  AccountViewModel.h  PrinterViewModel.cpp  PrinterViewModel.h  TransactionViewModel.cpp  TransactionViewModel.h
